# kolkhis

./: .gitignore  CLAUDE.md  docker-compose.yml
.github/workflows/: build-and-deploy.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  query_engine.py  seed.py  warehouse.py
backend/app/routers/: catalog.py  queries.py
backend/scripts/: load_taxi_data.py
frontend/: Dockerfile
frontend/src/: App.css  App.tsx  api.ts  auth.tsx  index.css  main.tsx
frontend/src/pages/: CatalogBrowser.tsx  QueryEditor.tsx  QueryHistory.tsx
